[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/sky/background_sky.png" type="Texture" id=1]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/Vividly-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/sky/title.gd" type="Script" id=4]
[ext_resource path="res://scenes/main/settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://sound/title_screen.1.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 3 )

[node name="Title" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="VBoxContainer" parent="HBox"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="HBox/Title"]
margin_left = 320.0
margin_top = 352.0
margin_right = 1600.0
margin_bottom = 496.0
size_flags_horizontal = 4
custom_colors/font_color_shadow = Color( 0.290196, 0.215686, 0.470588, 1 )
custom_constants/shadow_offset_y = 10
custom_fonts/font = SubResource( 1 )
text = "Kidnapped Again?!"

[node name="LevelSelect" type="Button" parent="HBox/Title"]
margin_left = 812.0
margin_top = 516.0
margin_right = 1107.0
margin_bottom = 573.0
size_flags_horizontal = 4
text = "Level Select"

[node name="Credits" type="Button" parent="HBox/Title"]
margin_left = 867.0
margin_top = 593.0
margin_right = 1052.0
margin_bottom = 650.0
size_flags_horizontal = 4
text = "Credits"

[node name="Settings" type="Button" parent="HBox/Title"]
margin_left = 855.0
margin_top = 670.0
margin_right = 1065.0
margin_bottom = 727.0
size_flags_horizontal = 4
text = "Settings"

[node name="Levels" type="MarginContainer" parent="HBox"]
margin_left = 1924.0
margin_right = 3844.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="VBox" type="VBoxContainer" parent="HBox/Levels"]
margin_left = 100.0
margin_right = 1820.0
margin_bottom = 1080.0
custom_constants/separation = 20
alignment = 1

[node name="Back" type="Button" parent="HBox/Levels/VBox"]
margin_top = 319.0
margin_right = 118.0
margin_bottom = 376.0
size_flags_horizontal = 0
text = "Back"

[node name="Level1" type="Button" parent="HBox/Levels/VBox"]
margin_left = 781.0
margin_top = 396.0
margin_right = 938.0
margin_bottom = 453.0
size_flags_horizontal = 4
text = "Level 1"

[node name="Level2" type="Button" parent="HBox/Levels/VBox"]
margin_left = 774.0
margin_top = 473.0
margin_right = 945.0
margin_bottom = 530.0
size_flags_horizontal = 4
disabled = true
text = "Level 2"

[node name="Level3" type="Button" parent="HBox/Levels/VBox"]
margin_left = 775.0
margin_top = 550.0
margin_right = 945.0
margin_bottom = 607.0
size_flags_horizontal = 4
disabled = true
text = "Level 3"

[node name="Level4" type="Button" parent="HBox/Levels/VBox"]
margin_left = 774.0
margin_top = 627.0
margin_right = 946.0
margin_bottom = 684.0
size_flags_horizontal = 4
disabled = true
text = "Level 4"

[node name="Level5" type="Button" parent="HBox/Levels/VBox"]
margin_left = 772.0
margin_top = 704.0
margin_right = 948.0
margin_bottom = 761.0
size_flags_horizontal = 4
disabled = true
text = "Level 5"

[node name="Credits" type="CenterContainer" parent="HBox"]
margin_left = 3848.0
margin_right = 5768.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 0 )

[node name="Marg" type="MarginContainer" parent="HBox/Credits"]
margin_top = 430.0
margin_right = 1920.0
margin_bottom = 650.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="VBox" type="VBoxContainer" parent="HBox/Credits/Marg"]
margin_left = 100.0
margin_right = 1820.0
margin_bottom = 220.0

[node name="Back" type="Button" parent="HBox/Credits/Marg/VBox"]
margin_right = 118.0
margin_bottom = 57.0
size_flags_horizontal = 0
text = "Back"

[node name="Credits" type="RichTextLabel" parent="HBox/Credits/Marg/VBox"]
margin_top = 61.0
margin_right = 1720.0
margin_bottom = 220.0
rect_min_size = Vector2( 1720, 0 )
bbcode_enabled = true
bbcode_text = "[center]Art and programming by [url=https://emily2.itch.io/]Exuin[/url]
Sound and music by pablovamil
Font used - [url=https://www.dafont.com/vividly.font]Vividly[/url][/center]"
text = "Art and programming by Exuin
Sound and music by pablovamil
Font used - Vividly"
fit_content_height = true
scroll_active = false

[node name="Tween" type="Tween" parent="."]

[node name="Settings" parent="." instance=ExtResource( 5 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="HBox/Title/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="HBox/Title/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="HBox/Title/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="HBox/Levels/VBox/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="HBox/Levels/VBox/Level1" to="." method="on_level_pressed" binds= [ "res://scenes/ground/level_1/ground_1.tscn" ]]
[connection signal="pressed" from="HBox/Levels/VBox/Level2" to="." method="on_level_pressed" binds= [ "res://scenes/ground/level_2/ground_2.tscn" ]]
[connection signal="pressed" from="HBox/Levels/VBox/Level3" to="." method="on_level_pressed" binds= [ "res://scenes/ground/level_3/ground_3.tscn" ]]
[connection signal="pressed" from="HBox/Levels/VBox/Level4" to="." method="on_level_pressed" binds= [ "res://scenes/ground/level_4/ground_4.tscn" ]]
[connection signal="pressed" from="HBox/Levels/VBox/Level5" to="." method="on_level_pressed" binds= [ "res://scenes/ground/level_5/ground_5.tscn" ]]
[connection signal="pressed" from="HBox/Credits/Marg/VBox/Back" to="." method="_on_Back_pressed"]
[connection signal="meta_clicked" from="HBox/Credits/Marg/VBox/Credits" to="." method="_on_Credits_meta_clicked"]
